--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name": "delight-im/router",
+	"name": "pinga/router",
 	"description": "Router for PHP. Simple, lightweight and convenient.",
 	"require": {
-		"php": ">=5.6.0"
+		"php": ">=8.1.0"
 	},
 	"type": "library",
 	"keywords": [ "router", "routing", "route", "http" ],
@@ -10,7 +10,7 @@
 	"license": "MIT",
 	"autoload": {
 		"psr-4": {
-			"Delight\\Router\\": "src/"
+			"Pinga\\Router\\": "src/"
 		}
 	}
 }
